# PLC-miniproject

./: README.md  RFID program with timers-Student-DESKTOP-OHKPDI5.opt  RFID program with timers.Device.Application.4f16bca4-83fe-4724-a881-03fd9e10170f.compileinfo  RFID program with timers.project  RFID program with timers.project.~u
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/saf/lib/saf/: carrier_handler  tcp_server
ros2_ws/install/saf/share/saf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/saf_msgs/share/saf_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/saf_msgs/share/saf_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_saf_msgs__rosidl_generator_cExport-noconfig.cmake  export_saf_msgs__rosidl_generator_cExport.cmake  export_saf_msgs__rosidl_generator_cppExport.cmake  export_saf_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  saf_msgs__rosidl_typesupport_cExport.cmake  saf_msgs__rosidl_typesupport_cppExport-noconfig.cmake  saf_msgs__rosidl_typesupport_cppExport.cmake  saf_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  saf_msgs__rosidl_typesupport_introspection_cExport.cmake  (+2 more)
ros2_ws/log/: latest_build
ros2_ws/src/saf/: setup.cfg  setup.py
ros2_ws/src/saf/saf/: TCP_server.py  carrier_handler.py
ros2_ws/src/saf_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/saf_msgs/msg/: Carrier.msg
(+11 files in other folders)
