<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>saf</name>
  <version>1.0.0</version>
  <description>ROS2 nodes for SAF miniproject</description>
  <maintainer email="hans.henrik.dagaard@gmail.com">Hans Henrik Dalgaard</maintainer>
  <license>MIT</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>saf_msgs</exec_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>saf_msgs</build_depend>  
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
